# verity-dp

./: .gitignore  .gitmodules  .prettierrc  CONTRIBUTORS.md  Cargo.toml  Cargo.toml.bak  LICENSE  README.md  generatedocs.sh  index.html  package.json  pnpm-workspace.yaml
.husky/: pre-commit
docs/: base.html  generatedocs.sh
evm/: .env.sample  README.md
examples/zktls/: .gitignore  Cargo.toml  README.md
examples/zktls/host/: Cargo.toml
examples/zktls/host/examples/: verify.rs
examples/zktls/host/src/: main.rs
examples/zktls/ic-verifier/: Cargo.toml  dfx.json  ic-verifier.did  package.json  pnpm-lock.yaml  rust-toolchain.toml  vite.config.js
examples/zktls/ic-verifier/__tests__/: actor.ts  identity.ts  test_verifier.test.ts
examples/zktls/ic-verifier/scripts/: build.sh
examples/zktls/ic-verifier/src/: lib.rs  utils.rs
examples/zktls/methods/: Cargo.toml  build.rs
examples/zktls/methods/guest/: Cargo.toml
examples/zktls/methods/guest/src/: main.rs
ic/canisters/asset_manager/: CANISTERS.md  Cargo.toml  README.md  package.json
ic/canisters/asset_manager/data_collection/: Cargo.toml
ic/canisters/asset_manager/protocol_data_collection/: Cargo.toml
ic/canisters/asset_manager/remittance/: Cargo.toml
ic/canisters/asset_manager/remittance/src/: lib.rs
ic/canisters/asset_manager/src/data_collection/: Cargo.toml
ic/canisters/asset_manager/src/data_collection/src/: lib.rs
ic/canisters/asset_manager/src/protocol_data_collection/: Cargo.toml  protocol_data_collection.did
ic/canisters/asset_manager/src/protocol_data_collection/src/: lib.rs
ic/canisters/asset_manager/src/remittance/: Cargo.toml
ic/canisters/asset_manager/src/remittance/src/: lib.rs
ic/libraries/: Cargo.toml  README.md  cargo.theme.css  generatedocs.sh  publish.sh
ic/libraries/src/: lib.rs
ic/libraries/src/crypto/: config.rs  ecdsa.rs  ethereum.rs  merkle.rs  mod.rs
ic/libraries/src/owner/: mod.rs
ic/libraries/src/random/: mod.rs
ic/libraries/src/remittance/: mod.rs  state.rs  types.rs  utils.rs
ic/libraries/src/remittance/external_router/: mod.rs  permissions.rs
ic/libraries/src/verify/: mod.rs  types.rs
ic/libraries/src/whitelist/: mod.rs
ic/managed/verifier/: .huskyrc  Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json  ic_af.did  init.did  package.json  pnpm-lock.yaml  rust-toolchain.toml  verity_verifier.did  vite.config.js
ic/managed/verifier/.cargo/: config.toml
ic/managed/verifier/__tests__/: actor.ts  identity.ts  test_verifier.test.ts
ic/managed/verifier/fixtures/: coingecko-request.json  nearblock.json  open-ai-request.json
ic/managed/verifier/scripts/: build.sh
ic/managed/verifier/src/: lib.rs  merkle.rs  proof.rs  state.rs  utils.rs
rs/local-verify/: Cargo.toml
rs/local-verify/src/: lib.rs  merkle.rs
rs/remote-verify/: Cargo.toml
rs/remote-verify/src/: config.rs  ic.rs  lib.rs
rs/tests/load/: Cargo.toml
rs/tests/load/src/: main.rs
rs/tlsn-core-no-session/: Cargo.toml
rs/tlsn-core-no-session/src/: lib.rs
rs/tlsn-core-no-session/src/proof/: mod.rs  session.rs  substrings.rs
rs/tlsn-core-no-session/src/session/: header.rs  mod.rs
rs/verify-local/: Cargo.toml  README.md
rs/verify-local/src/: ecdsa.rs  lib.rs  merkle.rs
rs/verify-private-transcript/: Cargo.toml  README.md
rs/verify-private-transcript/src/: attestation.rs  connection.rs  encodings_precompute.rs  fixtures.rs  lib.rs  merkle.rs  presentation.rs  provider.rs
rs/verify-private-transcript/src/attestation/: builder.rs  proof.rs
rs/verify-private-transcript/src/fixtures_data/: http.rs  mod.rs  provider.rs
rs/verify-private-transcript/src/fixtures_data/data/: example.presentation.tlsn
rs/verify-private-transcript/src/transcript/: encoding.rs  proof.rs
rs/verify-private-transcript/src/transcript/encoding/: encoder.rs  proof.rs  tree.rs
rs/verify-remote/: Cargo.toml
rs/verify-remote-precompute/: Cargo.toml
rs/verify-remote-precompute/fixtures/: notary.pub
rs/verify-remote-precompute/src/: lib.rs
rs/verify-remote/fixtures/: session.json
rs/verify-remote/src/: config.rs  ic.rs  lib.rs
rs/verify-tls/: Cargo.toml
rs/verify-tls/src/: lib.rs  no_session.rs  session.rs
rs/verify-tls/src/tlsn_core/: attestation.rs  connection.rs  hash.rs  merkle.rs  mod.rs  presentation.rs  request.rs  secrets.rs  signing.rs  transcript.rs
rs/verify-tls/src/tlsn_core/attestation/: builder.rs  config.rs  extension.rs  proof.rs
rs/verify-tls/src/tlsn_core/request/: builder.rs  config.rs
rs/verify-tls/src/tlsn_core/transcript/: commit.rs  encoding.rs  hash.rs  proof.rs
rs/verify-tls/src/tlsn_core/transcript/encoding/: encoder.rs  proof.rs  provider.rs  tree.rs
rs/verity-client/: Cargo.toml  README.md
rs/verity-client/examples/: get_by_api.rs  get_by_client.rs  get_directly.rs  post_by_api.rs  post_by_client.rs  post_by_client_multiple.rs  post_directly.rs
rs/verity-client/src/: client.rs  error.rs  lib.rs  request.rs
rs/verity-client/tests/: mock_prover.rs
src/ic/canisters/: Cargo.toml
src/ic/canisters/src/data_collection/src/: lib.rs
src/ic/canisters/src/protocol_data_collection/src/: lib.rs
src/ic/canisters/src/remittance/src/: lib.rs
src/zk/guest/: Cargo.toml
zk/: README.md  (+1 more)
zk/bench/precompute_benchmark/host/: Cargo.toml
zk/bench/precompute_benchmark/host/src/: main.rs
zk/guest/: Cargo.toml
zk/host/: Cargo.toml
zk/host/examples/: benchmark.rs
zk/host/src/: builder.rs  generate_groth16_proof.rs  ic.rs  lib.rs
zk/host/tests/: host.rs
zk/methods/: Cargo.toml  build.rs
zk/methods/benchmark/: Cargo.toml
zk/methods/benchmark/src/: main.rs
zk/methods/guest/: Cargo.toml
zk/methods/guest/src/: main.rs
zk/methods/verify/: Cargo.toml
zk/shared/: Cargo.toml
zk/shared/src/: lib.rs
zk/tests/zkvm/: .gitignore  Cargo.toml
zk/tests/zkvm/fixture/: 32b.presentation.json
zk/tests/zkvm/host/: Cargo.toml  main.rs
zk/tests/zkvm/host/src/: main.rs
zk/tests/zkvm/host/tests/: host.rs
zk/tests/zkvm/methods/: Cargo.toml  build.rs
zk/tests/zkvm/methods/guest/: Cargo.toml
zk/tests/zkvm/methods/guest/src/: main.rs
(+114 files in other folders)
