[workspace]
members = [
    "ic/libraries",
    "ic/managed/verifier",
    "rs/local-verify",
    "rs/remote-verify",
    "rs/tests/load",
    "rs/tlsn-core-no-session",
    "rs/verifier",
    "rs/verity-client",
    "zk/guest",
    "zk/host",
]
resolver = "2"

[workspace.package]
name="Verity Data Processor"
version = "0.2.0"
authors = ["Usher Labs <labs@usher.so>"]
repository = "https://github.com/usherlabs/verity-dp"
homepage = "https://www.usher.so/"
documentation = "https://www.usher.so/"
license = "MIT/Apache-2.0"
edition = "2021"

[workspace.dependencies]
alloy-sol-types = "0.8"
anyhow = "1.0"
bimap = "0.6"
bincode = "1.3"
bytes = "1.6"
candid = "0.10"
cfg-if = "1.0"
dotenv = "0.15"
easy-hasher = "2.2"
elliptic-curve = "0.13"
eth-encode-packed = "0.1"
futures = "0.3"
getrandom = "0.2"
hex = "0.4"
http = "1.0"
ic-agent = { git = "https://github.com/dfinity/agent-rs.git", rev = "60a64dd2d5368180f03a75df80f475d6e2caf21a" }
ic-cdk = "0.17"
ic-cdk-timers = "0.11"
ic-wasi-polyfill = { git = "https://github.com/wasm-forge/ic-wasi-polyfill", rev = "2476429bb1604d3ad5a28d458b8faa61bcbe4ada" }
libsecp256k1 = { version = "0.7", default-features = false }
mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-garble-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
opaque-debug = "0.3"
p256 = "0.13"
rand = "0.8"
reqwest = "0.12"
reqwest-eventsource = "0.6"
risc0-build = "1.1"
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
risc0-zkvm = { version = "1.1", default-features = false }
rs_merkle = "1.4"
rstest = "0.23"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", rev = "v0.1.0-alpha.6" }
tlsn-core-no-session = { path = "./rs/tlsn-core-no-session" }
tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "45370cc" }
tokio = "1.40"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1.10"
verity-client = { path = "./rs/verity-client" }
verity-dp-ic = { path = "./ic/libraries" }
verity-local-verify = { path = "./rs/local-verify" }
verity-remote-verify = { path = "./rs/remote-verify" }
verity-verifier = { path = "./rs/verifier" }
