[workspace]
members = [
    "examples/zktls/host",
    "examples/zktls/methods",
    "examples/zktls/methods/guest",
    "ic/libraries",
    "ic/managed/verifier",
    "rs/tests/load",
    "rs/verify-local",
    "rs/verify-private-transcript",
    "rs/verify-remote",
    "rs/verify-tls",
    "rs/verity-client",
    "zk/guest",
    "zk/host",
]
resolver = "2"

[workspace.package]
version = "0.2.4"
authors = ["Usher Labs <labs@usher.so>"]
repository = "https://github.com/usherlabs/verity-dp"
homepage = "https://www.usher.so/"
documentation = "https://www.usher.so/"
license = "MIT/Apache-2.0"
edition = "2021"

[workspace.dependencies]
alloy-sol-types = "0.8.14"
anyhow = "1.0.94"
bcs = { version = "0.1" }
bimap = "0.6.3"
bincode = "1.3.3"
blake3 = { version = "1.5" }
candid = "0.10.10"
derive_builder = { version = "0.12" }
dotenv = "0.15.0"
easy-hasher = "2.2.1"
eth-encode-packed = "0.1.0"
futures = "0.3.31"
getrandom = "0.2.15"
hex = "0.4.3"
http = "1.2.0"
ic-agent = { git = "https://github.com/dfinity/agent-rs.git", rev = "60a64dd2d5368180f03a75df80f475d6e2caf21a" }
ic-cdk = "0.17.0"
ic-cdk-timers = "0.11.0"
ic-wasi-polyfill = { git = "https://github.com/wasm-forge/ic-wasi-polyfill", rev = "2476429bb1604d3ad5a28d458b8faa61bcbe4ada" }
k256 = { version = "0.13" }
libsecp256k1 = { version = "0.7.1", default-features = false }
mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-garble-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
opaque-debug = "0.3.1"
p256 = "0.13.2"
rand = "0.8.5"
rand_core = { version = "0.6" }
reqwest = "0.12.9"
reqwest-eventsource = "0.6.0"
risc0-build = "1.2.0"
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
risc0-zkvm = { version = "1.2.0", default-features = false }
rs_merkle = "1.4.2"
rstest = "0.23.0"
serde = "1.0.215"
serde_json = "1.0.133"
sha2 = { version = "0.10" }
thiserror = "1.0.69"
tiny-keccak = "2.0"
tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "e7b2db6" }
tokio = "1.42.0"
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.11.0"
verity-client = { path = "./rs/verity-client" }
verity-dp-examples-zktls-methods = { path = "./examples/zktls/methods" }
verity-ic = { path = "./ic/libraries" }
verity-verify-local = { path = "./rs/verify-local" }
verity-verify-private-transcript = { path = "./rs/verify-private-transcript" }
verity-verify-remote = { path = "./rs/verify-remote" }
verity-verify-tls = { path = "./rs/verify-tls" }
web-time = { version = "0.2" }
webpki-roots = { version = "0.26" }
