[package]
name = "verity-dp-ic"
description = "A library for IC"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
rand = { workspace = true, features = ["getrandom"] }
anyhow = { workspace = true }
libsecp256k1 = { workspace = true, default-features = false, features = [
    "lazy-static-context",
] }
solabi = { workspace = true }
easy-hasher = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
sha3 = { workspace = true }
eth-encode-packed = { workspace = true }
