[package]
name = "verity-ic"
description = "A library containing utilities for the Verity IC components"
keywords = ["verity", "IC", "canister"]
readme = "./README.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
easy-hasher = { workspace = true }
eth-encode-packed = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
libsecp256k1 = { workspace = true, default-features = false, features = [
  "lazy-static-context",
] }
rand = { workspace = true, features = ["getrandom"] }
serde = { workspace = true }
serde_json = { workspace = true }
