[package]
name = "verity-ic"
description = "Utilities for Verity IC (Internet Computer) components, used by Managed Verifier or third-party IC Canisters."
keywords = ["verity", "IC", "canister"]
readme = "./README.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
candid = { workspace = true }
easy-hasher = { workspace = true }
eth-encode-packed = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
hex = { workspace = true }
httparse = "1.8"
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
libsecp256k1 = { workspace = true, default-features = false, features = [
  "lazy-static-context",
] }
rand = { workspace = true }
risc0-zkp = { workspace = true }
risc0-zkvm = { workspace = true, default-features = false }
rs_merkle = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
verity-verify-tls = { workspace = true, features = [
  "private-facets",
  "public-facets",
] }
