[package]
name = "local_verify"
version = "0.2.0"
license = "MIT/Apache-2.0"
description = "A Library containing utilities for the local verification of merkle tree response obtained from the managed verifier canister"
documentation = "https://www.usher.so/"
keywords = ["verity", "IC", "canister", "merkleproof"]
edition = "2021"

[dependencies]
hex = "0.4.3"
rs_merkle = "1.4.2"
libsecp256k1 = { version = "0.7.1", default-features = false, features = ["lazy-static-context"] }
easy-hasher = "2.2.1"
anyhow = "1.0.90"
