[package]
name = "verity-verify-local"
description = "A library providing utilities for locally verifying Merkle tree responses obtained from the managed Verity Verifier"
keywords = ["verity", "IC", "canister", "merkleproof"]
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
easy-hasher = { workspace = true }
hex = { workspace = true }
libsecp256k1 = { workspace = true, default-features = false, features = [
  "lazy-static-context",
] }
rs_merkle = { workspace = true }
