[package]
name = "verity-dp-rs-remote-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ic-cdk = { workspace = true }
anyhow = { workspace = true }
candid = { workspace = true }
ic-agent = { workspace = true }
ic-identity-hsm = { workspace = true }
ic-utils = { workspace = true }
verity-dp-rs-local-verify = { path = "../local-verify" }
