[package]
name = "tlsn-core-no-session"
edition = "2021"

[dependencies]
bimap = { version = "0.6.3", features = ["serde"] }
bincode = { version = "1.3.3" }
bytes = { version = "1.6.1", features = ["serde"] }
mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-garble-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
opaque-debug = "0.3.1"
rs_merkle = "1.4.2"
serde = "1.0.215"
thiserror = "1.0.69"
tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "45370cc" }

[dev-dependencies]
rstest = "0.23.0"
serde_json = "1.0.133"
