[package]
name = "verity-verify-private-transcript"
authors = ["TLSNotary Team"]
description = "Core types for TLSNotary"
keywords = ["tls", "mpc", "2pc", "types"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
version = "0.1.0-alpha.7"
edition = "2021"

[features]
default = []

[dependencies]
tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "e7b2db6" }

mpz-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-garble-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }

bcs = { version = "0.1" }
bimap = { version = "0.6", features = ["serde"] }
blake3 = { version = "1.5" }
derive_builder = { version = "0.12" }
hex = { version = "0.4"}
k256 = { version = "0.13" }
opaque-debug = { version = "0.3" }
p256 = { version = "0.13" }
rand = { version = "0.8" }
rand_core = { version = "0.6" }
rs_merkle = { git = "https://github.com/tlsnotary/rs-merkle.git", rev = "85f3e82", features = ["serde"]}
rstest = { version = "0.17" }
serde = { version = "1.0" }
sha2 = { version = "0.10" }
thiserror = { version = "1.0" }
tiny-keccak = { version = "2.0", features = ["keccak"] }
web-time = { version = "0.2" }
webpki-roots = { version = "0.26" }
bincode = "1.3.3"
