[package]
name = "verity-verify-private-transcript"
description = "Utility to enable verification of Transcript sub-proof of TLS proof, and accept pre-computed encodings."
edition = "2021"

[features]
default = []

[dependencies]
bcs = { workspace = true }
bimap = { workspace = true, features = ["serde"] }
bincode = { workspace = true }
blake3 = { workspace = true }
derive_builder = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true }
mpz-circuits = { workspace = true }
mpz-core = { workspace = true }
mpz-garble-core = { workspace = true }
opaque-debug = { workspace = true }
p256 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rs_merkle = { git = "https://github.com/tlsnotary/rs-merkle.git", rev = "85f3e82", features = [
  "serde",
] }
rstest = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tiny-keccak = { workspace = true, features = ["keccak"] }
tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "e7b2db6" }
web-time = { workspace = true }
webpki-roots = { workspace = true }
