[package]
name = "verity-verify-remote-precompute"
description = "Utility for delegating TLS proof verification to managed Verity Verifier, returning a signed Merkle tree for local/on-chain/in-zkVM verification."
keywords = ["verity", "IC", "canister", "merkleproof", "ecdsa", "merkle", "tls"]
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
ic-agent = { workspace = true }
serde = { workspace = true }
verity-verify-local = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
