[package]
name = "verity-verify-remote"
description = "A library providing utilities for fetching and verifying Merkle tree responses from a managed Verity Verifier in response to proof requests."
keywords = ["verity", "IC", "canister", "merkleproof", "ecdsa", "merkle"]
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
ic-agent = { workspace = true }
serde = { workspace = true }
verity-verify-local = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
