[package]
name = "verity-verify-tls"
description = "Utility for verifying Verity TLS proofs"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bincode = { workspace = true }
serde_json = { workspace = true }
verity-verify-private-transcript = { workspace = true }
