[package]
name = "verity-verify-tls"
description = "Utility for verifying Verity TLS proofs"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = []
private-facets = ["tlsn-attestation/private-facets"]
public-facets = ["tlsn-attestation/public-facets"]

[dependencies]
bincode = { workspace = true }
blake3 = { workspace = true, features = ["serde"] }
mpz-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# TLSNotary packages
tlsn-attestation = { workspace = true }
tlsn_rs_merkle = { workspace = true, features = ["serde"] }
tlsn-tls-core = { workspace = true, optional = true }
tlsn-utils = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
