[package]
name = "verity-client"
description = "Verity Client"
version = "0.0.1-alpha.1"
authors = ["Usher Labs <labs@usher.so>"]
repository = "https://github.com/usherlabs/ccamp/"
homepage = "https://www.usher.so/"
edition = "2021"

[dependencies]
http = "1.0"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
tokio-util = "0.7"
uuid = { version = "1.10", features = ["v4", "serde"] }
zmq = "0.10"
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
