[package]
name = "verity-client"
description = "Verity Rust Client"
version = "0.0.1-alpha.1"
authors = ["Usher Labs <labs@usher.so>"]
repository = "https://github.com/usherlabs/ccamp/"
homepage = "https://www.usher.so/"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures = "0.3"
http = "1.0"
reqwest = { version = "0.12", features = ["json"] }
reqwest-eventsource = "0.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1.0"
