[package]
name = "verity-client"
description = "Verity Rust Client"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
reqwest-eventsource = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
