[package]
name = "verity-dp-zk-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
risc0-build = { version = "1.1.2", features = ["docker"] }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
risc0-zkvm = { version = "1.1.2", default-features = false }