[package]
name = "verity-dp-zk-guest"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
dotenv = { workspace = true }
risc0-build = { workspace = true, features = ["docker"] }
risc0-build-ethereum = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, default_features = false }
