[package]
name = "verity-dp-zk-host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-build = { version = "1.1.2", features = ["docker"] }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
risc0-zkvm = { version = "1.1.2", features = ["client"] }
dotenv = "0.15.0"
alloy-primitives = { version = "0.6", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
alloy-sol-types = { version = "0.6" }
anyhow = { version = "1.0.75" }
bonsai-sdk = { version = "0.8.0-rc.3" }
serde = "1"
serde_json = "1.0.107"
verity-remote-verify = { path = "../../rs/remote-verify/" }