[package]
name = "verity-dp-zk-host"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
risc0-build = { workspace = true, features = ["docker"] }
risc0-build-ethereum = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
serde = { workspace = true }
serde_json = { workspace = true }
tlsn-core-no-session = { workspace = true }
verity-verify-remote = { workspace = true }
