[package]
name = "verity-dp-zk-host"
description = "Utilities for Verity zkTLS components that reside in the host, orchestrating the zkVM to aggregate TLS proofs."
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
dotenv = { workspace = true }
risc0-build = { workspace = true, features = ["docker"] }
risc0-build-ethereum = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
verity-dp-zk-methods = { workspace = true }
verity-dp-zk-shared = { workspace = true }
verity-fixtures = { workspace = true }
verity-verify-private-transcript = { workspace = true }
verity-verify-remote = { workspace = true }
