[package]
name = "verity-dp-examples-zktls-host"
version.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
k256 = { workspace = true }
risc0-zkvm = { workspace = true, default-features = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
verity-client = { workspace = true }
verity-dp-examples-zktls-methods = { workspace = true }
verity-fixtures = { workspace = true }
verity-verify-remote = { workspace = true }
verity-verify-tls = { workspace = true }
