[package]
name = "verity-dp-examples-zktls-methods"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[build-dependencies]
risc0-build = { workspace = true }
verity-dp-zk-host = { workspace = true }

[package.metadata.risc0]
methods = ["guest"]
