[package]
name = "ic-af"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" 
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0"
elliptic-curve = { version = "0.13.5", features = ["pkcs8"] }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", rev = "v0.1.0-alpha.6" }
p256 = { version = "0.13", features = ["pem", "ecdsa"] }
verity_dp_ic = {path = "../../libraries" }
verity-verifier = {path = "../../../../verity/verifier"}
sha2 = "0.10.8"
hex = "0.4.3"
httparse = "1.8.0"
bincode = "1.3.3"
sha3 = "0.10.8"
easy-hasher = "2.2.1"
libsecp256k1 = { version = "0.7.1", default-features = false, features = ["lazy-static-context"] }
ic-wasi-polyfill = { git = "https://github.com/wasm-forge/ic-wasi-polyfill", rev = "2476429bb1604d3ad5a28d458b8faa61bcbe4ada"}
eth-encode-packed = "0.1.0"
anyhow = "1.0.90"
rs_merkle = "1.4.2"
