[package]
name = "ic-af"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = { workspace = true }
rs_merkle = { workspace = true }

candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
serde_json = { workspace = true }

easy-hasher = { workspace = true }
libsecp256k1 = { workspace = true }

verity-verifier = { workspace = true }
ic-wasi-polyfill = { workspace = true }

verity-dp-ic = { path = "../../libraries" }