[package]
name = "verity-ic-verifier"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
candid_parser = "0.2.1"
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-wasi-polyfill = { workspace = true }
rs_merkle = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tlsn-core = { workspace = true }
verity-ic = { workspace = true }
verity-verify-tls = { workspace = true }
