[package]
name = "verity-dp-rs-tests-load"
description = "Verity DP Rust Tests: Load Test"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
verity-client = { workspace = true }
