[workspace]
resolver = "1"
members = [
    "src/remittance",
    "src/data_collection",
    "src/protocol_data_collection",
]

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" 
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0"
solabi = "0.2.0"
verity_dp_ic = { path = "../libraries" }