[package]
name = "verity_dp_zk_guest"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
risc0-build = { version = "1.0", features = ["docker"] }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.0.0" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.0.0" }
risc0-zkvm = { version = "1.0", default-features = false }
# tlsn-substrings-verifier = { path = "../../rs/tlsn-substrings-verifier"}