[package]
name = "verity-dp-zk-benchmark"
description = "Utilities to benchmark proof verification in the guest/zkVM with and without precomputed encodings"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bincode = { workspace = true }
risc0-zkvm = { workspace = true, default-features = false, features = ['std'] }
verity-verify-tls = { workspace = true, default-features = false, features = [
  "private-facets",
] }
