[package]
name = "verity-dp-zk-guest"
description = "Utilities for Verity zkTLS components that reside in the guest/zkVM"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bincode = { workspace = true }
risc0-zkvm = { workspace = true, default_features = false, features = ['std'] }
serde_json = { workspace = true }
verity-verify-private-transcript = { workspace = true }
