[package]
name = "verity-dp-zk-guest"
description = "Utilities for Verity zkTLS components that reside in the guest/zkVM"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bincode = { workspace = true }
risc0-zkvm = { workspace = true, default-features = false, features = ['std'] }
verity-verify-tls = { workspace = true, default-features = false, features = [
  "private-facets",
] }
