[workspace]
members = [
  "host",
  "methods",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Usher Labs <labs@usher.so>"]
repository = "https://github.com/usherlabs/verity-dp"
homepage = "https://www.usher.so/"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
chrono = { version = "0.4" }
serde = "1.0"
tracing-subscriber = "0.3"
risc0-zkvm = { version = "1.1.2" }
verity-dp-zk-host = { path = "../../host" }
verity-client = { path = "../../../rs/verity-client" }
verity-verifier = { path = "../../../../verity/verifier" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
