[workspace]
members = [
  "host",
  "methods",
]
resolver = "2"

[workspace.package]
version = "0.0.1-alpha.4"
authors = ["Usher Labs <labs@usher.so>"]
repository = "https://github.com/usherlabs/verity"
homepage = "https://www.usher.so/"
edition = "2021"
license = "Apache-2.0"

# TODO: move dependencies to the root Cargo.toml 
[workspace.dependencies]
chrono = { version = "0.4" }
serde = "1.0"
tracing-subscriber = "0.3"
risc0-build = { version = "1.0" }
risc0-zkvm = { version = "1.0" }
verity-verifier = { path = "../../../../verity/verifier" }