[workspace]
members = ["host", "methods"]
resolver = "2"

[workspace.package]
version = "0.0.1-alpha.4"
authors = ["Usher Labs <labs@usher.so>"]
repository = "https://github.com/usherlabs/verity"
homepage = "https://www.usher.so/"
edition = "2021"
license = "Apache-2.0"

# TODO: move dependencies to the root Cargo.toml 
[workspace.dependencies]
bincode = "1.3.3"
chrono = { version = "0.4" }
risc0-build = { version = "1.0" }
risc0-zkvm = { version = "1.0" }
serde_json = "1.0"
tracing-subscriber = "0.3"
verity-verify-private-transcript = { path = "../../../rs/verify-private-transcript" }
